--- a/SpendApp/templates/SpendApp/index.html
+++ b/SpendApp/templates/SpendApp/index.html
@@ -7,19 +7,28 @@
   <div class="row align-items-center g-lg-5 py-5">
     <div class="col-lg-7 text-center text-lg-start">
       <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Log in</h1>
-      <p class="col-lg-10 fs-4">To continue, please log in. Don’t have an account? Click below to sign up.
+      <p class="col-lg-10 fs-4">To continue, please log in. Don't have an account? Click below to sign up.
       </p>
       <a href="{% url 'Register' %}" style="text-decoration: none;">Register</a>
     </div>
     <div class="col-md-10 mx-auto col-lg-5">
-      <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
-        <div class="form-floating mb-3"> <input type="email" class="form-control" id="floatingInput"
-            placeholder="name@example.com"> <label for="floatingInput">Email address</label> </div>
-        <div class="form-floating mb-3"> <input type="password" class="form-control" id="floatingPassword"
-            placeholder="Password"> <label for="floatingPassword">Password</label> </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
-        <hr class="my-4"> <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small>
-      </form>
+<form method="post" class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
+  {% csrf_token %}
+
+  {% for field in form %}
+    <div class="mb-3">
+      <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+      {{ field }}
+      {% if field.errors %}
+        <div class="text-danger mt-1 small">
+          {{ field.errors|striptags }}
+        </div>
+      {% endif %}
+    </div>
+  {% endfor %}
+
+  <button class="btn btn-primary btn-lg w-100" type="submit">Log in</button>
+</form>
     </div>
   </div>
 </div>
