--- a/SpendApp/templates/SpendApp/register.html
+++ b/SpendApp/templates/SpendApp/register.html
@@ -5,21 +5,41 @@
 {% block content %}
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
   <div class="row align-items-center g-lg-5 py-5">
-    <div class="col-lg-7 text-center text-lg-start">
+    <div class="col-lg-6 text-center text-lg-start">
       <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Register</h1>
       <p class="col-lg-10 fs-4">Create your account using the fields on the right.
       </p>
     </div>
-    <div class="col-md-10 mx-auto col-lg-5">
-      <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
-        <div class="form-floating mb-3"> <input type="email" class="form-control" id="floatingInput"
-            placeholder="name@example.com"> <label for="floatingInput">Email address</label> </div>
-        <div class="form-floating mb-3"> <input type="password" class="form-control" id="floatingPassword"
-            placeholder="Password"> <label for="floatingPassword">Password</label> </div>
-        <div class="form-floating mb-3"> <input type="password" class="form-control" id="floatingPassword"
-            placeholder="Confirm password"> <label for="floatingPassword">Confirm password</label> </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
-        <hr class="my-4"> <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small>
+    <div class="col-md-10 mx-auto col-lg-6">
+      <form method="post" class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
+        {% csrf_token %}
+        <div class="row g-4">
+          {% for field in form %}
+          <div class="col-md-6">
+            <div class="mb-3">
+              <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+              {{ field }}
+              {% if field.errors %}
+              <div class="text-danger small mt-1">
+                {% for error in field.errors %}
+                {{ error }}<br>
+                {% endfor %}
+              </div>
+              {% endif %}
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+        {% if form.non_field_errors %}
+        <div class="text-danger mb-3">
+          {% for error in form.non_field_errors %}
+          {{ error }}<br>
+          {% endfor %}
+        </div>
+        {% endif %}
+        <button class="w-100 btn btn-lg btn-primary mt-4" type="submit">Sign up</button>
+        <hr class="my-4">
+        <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small>
       </form>
     </div>
   </div>
