Tested apis and created dashboard page

--- a/SpendApp/templates/SpendApp/home-page.html
+++ b/SpendApp/templates/SpendApp/home-page.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>You're logged in!</h1>
+<a href="{%url 'Dashboard' %}">Go to your dashboards</a>
 {% endblock %}
