--- a/templates/base.html
+++ b/templates/base.html
@@ -11,29 +11,30 @@
 
 <body>
 
-<div class="container"> 
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"> 
-     <a href="/pl/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"> 
-      <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-       <use xlink:href="#bootstrap"></use>
-      </svg> </a> 
-     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0"> 
-      <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-secondary">Home</a></li> 
-      <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-dark">placeholder</a></li> 
-      <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-dark">placeholder</a></li> 
-      <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-dark">placeholder</a></li> 
-      <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-dark">placeholder</a></li> 
-     </ul> 
-     <div class="col-md-3 text-end"> 
-      <button type="button" class="btn btn-outline-primary me-2">Login</button> 
-      <button type="button" class="btn btn-primary">Register</button>
-      <form method="post" action="{% url 'logout' %}" class="d-inline">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-primary">Logout</button>
-      </form>
-     </div> 
-    </header> 
-   </div>
+  <div class="container">
+    <header
+      class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+      <a href="/pl/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+          <use xlink:href="#bootstrap"></use>
+        </svg> </a>
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-dark">placeholder</a></li>
+        <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-dark">placeholder</a></li>
+        <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-dark">placeholder</a></li>
+        <li><a href="/pl/docs/5.2/examples/headers/#" class="nav-link px-2 link-dark">placeholder</a></li>
+      </ul>
+      <div class="col-md-3 text-end">
+        <a href="{% url 'Home' %}" type="button" class="btn btn-outline-primary me-2">Login</a>
+        <a href="{% url 'Register' %}" type="button" class="btn btn-primary">Register</a>
+        <form method="post" action="{% url 'logout' %}" class="d-inline">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-primary">Logout</button>
+        </form>
+      </div>
+    </header>
+  </div>
 
   {% block content %}{% endblock %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
